shipit_code_coverage: Stop generating coverage by directory report during task execution; directly generate it in the backend on request and cache it for a day
