# src/shipit_uplift/shipit_uplift/api.yml
@@ -141,28 +141,12 @@ paths:
           schema:
             $ref: '#/definitions/Contributor'
 
-  /hook/artifact/{group}/{hook}/{artifact}:
+  /coverage_by_dir:
     get:
-      operationId: "shipit_uplift.api.load_hook_artifact"
-      parameters:
-      - name: group
-        in: path
-        description: Hook group id
-        required: true
-        type: string
-      - name: hook
-        in: path
-        description: Hook id
-        required: true
-        type: string
-      - name: artifact
-        in: path
-        description: Artifact name to retrieve
-        required: true
-        type: string
+      operationId: "shipit_uplift.api.coverage_by_dir"
       responses:
         200:
-          description: The artifact as is
+          description: Code coverage information by directory
 
 definitions:
 
